# book-pdf-memona

./: .gitignore  .replit  README.md  generate.sh  generate_cover.sh  package-lock.json  package.json  pyproject.toml  replit.md
api/: cover_generator.py  cover_models.py  dividers.py  layout.py  main.py  models.py  pdf_generator.py  utils.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: PdfSpreadViewer.tsx
client/src/pages/: home.tsx  live-cover.tsx  live.tsx
examples/: araz_book_test.json  big_example.json  book_payload.json  small_example.json
server/: index.ts  routes.ts
tests/: test_full_page_images.py
